src/main/resources/tests/Semantics/bad/declarationAlready.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure UniqueIdentifiers is
   A : Integer;
   -- A : Float; -- Doit générer une erreur de compilation car 'A' est déjà déclaré.
begin
   null;
end UniqueIdentifiers;
